Fix sidebar on mobile taking clicks on header

--- a/src/global.css
+++ b/src/global.css
@@ -193,7 +193,6 @@ a:hover {
     height: 80px;
     font-size: var(--font-h3);
     background: transparent;
-    z-index: 99;
     flex-direction: row;
     justify-content: space-between;
     padding: 0 5%;
@@ -252,15 +251,14 @@ a:hover {
     display: none;
     width: 45%;
     height: 100%;
-    padding: 100px 2rem;
+    padding: 5% 2rem;
     background-color: #e19898;
     justify-content: flex-start;
     transition: transform 1s ease;
-    pointer-events: none;
 }
 
 .header-mobile-div > a, .header-mobile-div > button {
-    font-size: var(--font-h1-5);
+    font-size: var(--font-h2);
     color: #1c0e1a;
     text-align: left;
     width: 100%;
@@ -270,7 +268,7 @@ a:hover {
 
 .header-mobile-div > button {
     padding: 1rem;
-    font-size: var(--font-h1);
+    font-size: var(--font-h2);
     background-color: #1c0e1a;
     color: var(--dark-text);
     transition: 0.3s ease;
@@ -426,7 +424,13 @@ textarea {
 
     .dev-header-right {
         width: 50% !important;
-        justify-content: space-between;
+        justify-content: flex-end;
+        column-gap: 1rem;
+    }
+
+    .dev-header-left {
+        width: 50%;
+        column-gap: 0.5rem;
     }
 
     .body-top {
